--- a/page/templates/introduce.html
+++ b/page/templates/introduce.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
+{%load static%}
 
+{%block title%}드리머리 - 헤어 서비스 O2O {%endblock%}
+
+{% block link %}{% static 'css/home.css' %}{% endblock  %}
 <!doctype html>
 <html lang="en">
   <head>
