--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -8,13 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>{%block title%}{% endblock %}</title>
+    <title>{% block title %} {% endblock %}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/docs/4.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="/docs/4.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -27,18 +27,14 @@
     <meta name="theme-color" content="#563d7c">
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
 
     <style>
@@ -50,7 +46,7 @@
             -ms-user-select: none;
             user-select: none;
         }
-
+        
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
@@ -59,82 +55,49 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
-    <link rel="stylesheet" href="{%static 'css/base.css'%}">
-    <link rel="stylesheet" href="{%block link%}{% endblock %}">
-</head>%
+
+    <!-- CSS static -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% block link %} {% endblock %}" />
+</head>
+
 <body>
     <header>
-        <div id = "navbar" class="navbar navbar-dark bg-dark shadow-sm">
-           <a id = "logo" href = "{% url 'home'%}" class= "navbar-brand align-self-center">
-            <img src = "{% static 'images/dreamary.png' %}" width = "35" height = "35" alt = "dreamry.png">
-            <label class = "navbar-brand align-self-center">Dreamary</label>
-           </a>
+        <div id="navbar" class="navbar navbar-expand-lg navbar-light-bg-light sticky-top">
+            <a id="logo" href="{% url 'home' %}" class="navbar-brand align-self-center">
+                <img src="{% static 'images/dreamary_logo.png' %}" width="35" height="35" alt="Dreamary Logo">
+                <label class="navbar-brand align-self-center">Dreamary</label>
+            </a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{% url 'new' %}">디자이너 등록하기</a>
+                </div>
+            </div>
         </div>
     </header>
 
     <main role="main">
-
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1>드리머리</h1><hr>
-                <p class="lead text-muted">열정있는 디자이너에게 받는 <br> 합리적인 헤어 서비스</p>
-                <p>
-                    <a href="{% url 'introduce'%}" class="btn btn-outline-danger">드리머리 열어 보기</a>
-                </p>
-            </div>
-        </section>
-
-        <div class="album py-5 bg-light">
-            <div class="container">
-                <div class="card-columns">
-                {% for designer in designers %}
-                    <div class="card mb-4 shadow -sm">
-                     {%if designer.image %}
-                     <img src="{{designer.image.url}}" class="card-image-top"alt="Designer_image">
-                     {% else %}
-                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
-                                focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-                                <title>Profile</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Dreamary</text>
-                    </svg>
-                     {%endif%}
-                     <div class="card-body">
-                        <h4 class="card-title">{{designer.name}}</h4>
-                        <h6 class="card-text">{{designer.address}}</h6>
-                        <hr>
-                        <p class="card-text">{{designer.description}}</p>
-                        <div class="d-flex justify-content-between align-itmes-center">
-                            <div class = "btn-group">
-                                <a href="{%url 'detail' designer.id%}" class="btn btn-sm btn-outline-secondary">자세히 알아보기</a>
-                            </div>
-                        </div>
-                     </div>
-                    </div>
-                {%endfor%}
-                </div>
-            </div>
-        </div>
+        {% block content %}
+        
+        {% endblock %}
     </main>
 
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
-                <a href="#">맨 위로 돌아가기</a>
+                <a href="#">Back to top</a>
             </p>
-            <p>드리머리 장고와 부트스트랩으로 만들기</p>
-            <p>멋사 8기</p>
+            <p>Develop Dreamary with Django & Bootstrap</p>
+            <p>LikeLion 8th</p>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script>
         window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')
     </script>
-    <script src="/docs/4.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous">
+    <script src="/docs/4.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
